// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic field type: chunk-this-is-not-the-real-hash 1`] = `
Object {
  "main": "../chunk-some-hash.cjs.js",
  "module": "../chunk-some-hash.esm.js",
}
`;

exports[`basic field type: dist/basic-field-type.cjs.js 1`] = `
"'use strict';

var _join = require(\\"path\\").join;

Object.defineProperty(exports, '__esModule', {
  value: true
});
let MyCoolFieldType = {
  views: {
    Field: _join(__dirname, \\"11z4har\\")
  }
};
exports.MyCoolFieldType = MyCoolFieldType;
"
`;

exports[`basic field type: dist/basic-field-type.esm.js 1`] = `
"import { join as _join } from \\"path\\";
let MyCoolFieldType = {
  views: {
    Field: _join(__dirname, \\"11z4har\\")
  }
};
export { MyCoolFieldType };
"
`;

exports[`basic field type: dist/chunk-this-is-not-the-real-hash.cjs.js 1`] = `
"'use strict';

var Field = () => {
  return 'my cool react component stuff';
};

exports.default = Field;
"
`;

exports[`basic field type: dist/chunk-this-is-not-the-real-hash.esm.js 1`] = `
"var Field = () => {
  return 'my cool react component stuff';
};

export default Field;
"
`;

exports[`basic field type: package.json 1`] = `
Object {
  "license": "MIT",
  "main": "dist/basic-field-type.cjs.js",
  "module": "dist/basic-field-type.esm.js",
  "name": "basic-field-type",
  "private": true,
  "version": "1.0.0",
}
`;

exports[`basic field type: src/index.js 1`] = `
"import { importView } from '@keystonejs/build-field-types';

export let MyCoolFieldType = {
  views: {
    Field: importView('./views/Field'),
  },
};
"
`;

exports[`basic field type: src/views/Field.js 1`] = `
"export default () => {
  return 'my cool react component stuff';
};
"
`;
